update for Mobile function